--- a/resources/mails/email-confirmation.html
+++ b/resources/mails/email-confirmation.html
@@ -1,13 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <title>JiraRush - подтверждение почты</title>
-    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
-</head>
-<body>
-<p th:text="'Привет, ' + ${user.firstName} + '.'"/>
-<p>Чтобы завершить настройку учетной записи и начать пользоваться JiraRush, подтвердите, что вы правильно указали вашу
-    электронную почту.</p>
-<a th:href="${confirmationUrl}">Подтвердить почту</a>
-</body>
+<div class="lang_buttons">
+    <a href="#" class="button rus_lang">
+        Английский
+    </a>
+    <a href="#" class="button en_lang">
+        Russian
+    </a>
+</div>
+<div class="rus_lang">
+    <head>
+        <title>JiraRush - подтверждение почты</title>
+        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    </head>
+    <body>
+    <p th:text="'Привет, ' + ${user.firstName} + '.'"/>
+    <p >Чтобы завершить настройку учетной записи и начать пользоваться JiraRush, подтвердите, что вы правильно указали вашу
+        электронную почту.</p>
+    <a th:href="${confirmationUrl}">Подтвердить почту</a>
+    </body>
+</div>
+
+<div class="en_lang">
+    <head>
+        <title>JiraRush - mail confirmation</title>
+        <meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
+    </head>
+    <body>
+    <p th:text="'Hello, ' + ${user.firstName} + '.'"/>
+    <p >To complete your account setup and start using JiraRush, please confirm that you have entered your correct
+        email.</p>
+    <a th:href="${confirmationUrl}">Confirm email</a>
+    </body>
+</div>
 </html>
